@@ -167,6 +167,14 @@
 								</config>
 						</TCEforms>
 					</showimages>
+					<linkNamesToSingleView>
+						<TCEforms>
+								<label>LLL:EXT:bzd_staff_directory/locallang_db.php:tt_content.pi_flexform.linkNamesToSingleView</label>
+								<config>
+										<type>check</type>
+								</config>
+						</TCEforms>
+					</linkNamesToSingleView>
 					<disableBackLink>
 						<TCEforms>
 								<label>LLL:EXT:bzd_staff_directory/locallang_db.php:tt_content.pi_flexform.disableBackLink</label>
