@@ -27,6 +27,9 @@
 	color: white;
 }
 
+.tx-bzdstaffdirectory-pi1 a {
+	text-decoration: none;
+}
 
 .tx-bzdstaffdirectory-pi1 table {
 	border-spacing: 0px;
